# FlowBook

./: .copier-answers.yml  .gitignore  .jupyter_ystore.db  .mcp.json  .prettierignore  2025-10-28-caveat-the-messages-below-were-generated-by-the-u.txt  2025-10-29-caveat-the-messages-below-were-generated-by-the-u.txt  2025-11-05-history.txt  2025-11-08-make-it-so-the-the-history-panel-shows-messages-li.txt  2025-11-09-refactor-clipy-move-into-a-new-dataferretcli.txt  2025-11-14-you-were-fixing-a-bug-but-the-conncection-failed.txt  2025-11-15-add-an-optinal-list-of-keystoinclude-to-checkpoi.txt  2025-11-15-include-in-the-optimization-and-repair-prompts-the.txt  2025-11-17-make-a-new-command-split-that-examines-each-code.txt  2025-11-18-in-checkpoint-i-want-to-speed-up-copying-of-dataf.txt  2025-11-20-add-a-new-split-argument-to-optimizeclipy-th.txt  2025-11-21-i-want-to-change-diffpy-so-the-structure-returned.txt  2025-11-22-in-diff-make-it-okay-for-a-dataframe-column-seri.txt  2025-11-23-i-want-a-new-feature-tests.txt  2025-11-26-complete-the-isdeepcopyable-operation-for-the-ker.txt  2025-11-26-in-the-modal-dialog-that-comes-up-when-commands-ru.txt  2025-11-26-look-at-ferretkernelpy-improve-the-code-and-cl.txt  2025-11-26-when-running-the-testpy-command-dont-save-into.txt  2025-11-29-add-a-new-command-line-option-to-clipy-force-c.txt  2025-11-29-caveat-the-messages-below-were-generated-by-the-u.txt  2025-11-29-in-the-kernel-before-running-code-call-a-new-hel.txt  2025-11-29-redesign-checkpointpy-use-a-new-deepcopy-operat.txt  2025-11-30-caveat-the-messages-below-were-generated-by-the-u.txt  2025-11-30-change-ferret-kernel-so-that-when-a-timeout-happen.txt  2025-12-03-change-slurmcli-to-strip-out-all-ansi-code-from-t.txt  2025-12-03-the-cli-client-starts-a-ferret-kernel-both-use-t.txt  2025-12-04-change-installkernel-to-only-install-the-kernel-i.txt  2025-12-04-extend-cli-to-save-the-metadata-returned-from-the.txt  2025-12-05-make-a-plan-addess-the-8-missing-cases-and-limit.txt  2025-12-06-caveat-the-messages-below-were-generated-by-the-u.txt  2025-12-07-caveat-the-messages-below-were-generated-by-the-u.txt  2025-12-07-make-a-new-server-command-called-testleq-it-shou.txt  2025-12-08-caveat-the-messages-2.txt  2025-12-08-caveat-the-messages-below-were-generated-by-the-u.txt  2025-12-09-caveat-the-messages-below-were-generated-by-the-u.txt  (+81 more)
.claude/agents/: reproducibility-fixer.md
.claude/commands/: basic-run-nbi.md  basic-run.md  categorize-repro-errors.md  cli-flowbook-fix.md  fix-notebook-nbi.md  fix-notebook.md  flowbook-fix.md  flowbook-nb-fix.md  sync-spec.md
.github/workflows/: build.yml  check-release.yml  pypi.yml  release.yaml  release.yml
data_ferret/: __init__.py  __main__.py  handlers.py
data_ferret/agent/: agent.py  llm_costs.json  test_agent.py
data_ferret/cli/: __init__.py  cli.py  ferret_timers.py  helpers.py  lab_cli.py  metadata_cli.py  optimization_metadata.py  optimize_cli.py  split_cli.py  stats_cli.py  stats_display.py  test_ferret_timers.py  test_metadata_format.py
data_ferret/kernel/: __main__.py  ast_utils.py  checkpoint.py  checkpoint.py.backup  column_tracking.py  cudf_compat.py  deepcopy.py  deepcopyable.py  diff.py  display_helpers.py  equality.py  extended_types.py  ferret_client.py  ferret_kernel.py  ferret_pdb.py  json_utils.py  kernel_command_client.py  kernel_command_handlers.py  kernel_commands.py  locals.py  magics.py  models.py  monotonicity.py  opaque.py  process_cleanup.py  scalene_runner.py  structural_tracking.py  test_catboost_pool.py  test_checkpoint.py  test_checkpoint_comprehensive.py  test_checkpoint_corner_cases.py  test_checkpoint_functions.py  test_cudf_compat.py  (+37 more)
docs/: CUDF_CHECKPOINT_DEDUP_PLAN.md  CUDF_CHECKPOINT_OPTIMIZATION.md  class-attribute-tracking-plan.md  flowbook-execution-guarantees-report.md  plan-memory-v3.md
examples/: 01_OutOfOrder_Safe.ipynb  02_ForwardContamination.ipynb  03_BackwardViolation.ipynb  04_StalenessChain.ipynb  05_ExecRestore_Recovery.ipynb  06_DataFrame_Column_Tracking.ipynb  07_Edit_Staleness.ipynb  10_UnrecoverableMutation_Arrays.ipynb  Checkpoints.ipynb  Columns.ipynb  Columns2.ipynb  CudfCheckpointBenchmark.ipynb  CudfGpuCheckpoint.ipynb  CudfGpuPipeline.ipynb  Example.ipynb  FlowBookTutorial.ipynb  GettingStarted.ipynb  PaperExample.ipynb  SCDViolation.ipynb  Test1.ipynb  file_tracking_basic.ipynb  file_tracking_csv.ipynb  file_tracking_rbw.ipynb  memory_benchmark.ipynb  rerun_overhead_test.ipynb  structural_comprehensive_demo-Copy1.ipynb  structural_dataframe_attrs.ipynb  structural_enforce_violations.ipynb  structural_enforce_violations_processed.ipynb  structural_nested_dataframes.ipynb  structural_sdc_kernel.ipynb  structural_series_attrs.ipynb  structural_tracking_intro.ipynb  structural_tracking_modes.ipynb  structural_using_vs_revealing.ipynb  structural_vs_column_tracking.ipynb  test_row_add.ipynb  test_row_add_processed.ipynb  test_row_add_warn.ipynb  test_row_add_warn_processed.ipynb  (+1 more)
flowbook/: __init__.py  __main__.py  handlers.py  kernel_discovery.py  slurm-notes.sh
placeholder-package/: README.md  pyproject.toml
placeholder-package/flowbook/: __init__.py
schema/: plugin.json
scripts/: run-base.sh  run-flowbook.sh  run.sh  timers.sh  type_coverage.py
src/: api.ts  cellhighlighter.ts  cellindex.ts  cellindexutils.ts  celltoolbar.ts  executiondialog.tsx  executionhook.ts  handler.ts  history.ts  historypanel.tsx  index.ts  kernel.ts  logpanel.tsx  manager.ts  messagecomponents.tsx  metadatapanel.tsx  panel.tsx  toolbar.ts  types.ts  unittestpanel.tsx
style/: _archived.css  base.css  dependencies.css  history.css  index.css  index.js
tests/: test_combined_optimize.py  test_comm_simple.py  test_diffresult_serialization.py  test_env_in_optimize.py  test_execution_error_capture.py  test_generate_with_env.py  test_notebook.ipynb  test_optimize_command.py  test_optimize_keys_to_include.py  test_partial_execution_bug.py  test_progress_messages.py  test_prompt_integration.py  test_real_kernel_message_capture.py  test_stream_output.py  test_validate_change_command.py
(+655 files in other folders)
