[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "data_ferret"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jupyter_server>=2.4.0,<3",
    "openai",
    "jupyterlab>=4.0.0",
    "nbformat>=5.0.0",
    "openai-agents[litellm]",
    "jupyter",
    "termcolor",
    "dill",
    "markdown",
    "jupytext",
    "pandas",
    "numpy",
    "seaborn",
    "matplotlib",
    "scikit-learn",
    "scipy",
    "pytest",
    "hypothesis",
    "scalene @ git+https://github.com/plasma-umass/scalene.git@229fe55a900bff360ad4bc0b2e915d20a6916c12",

    # LSP
    "jedi-language-server",
    "python-lsp-jsonrpc",
    "nbconvert",

    # Server Extension
    "jupyter-server>=1.0",
    "jupyter-client>=7.0",
    "tornado",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.scripts]
data_ferret = "data_ferret.cli.cli:cli_main"
data_ferret_optimize = "data_ferret.cli.optimize_cli:optimize_cli_main"
data_ferret_split = "data_ferret.cli.split_cli:split_cli_main"
data_ferret_stats = "data_ferret.cli.stats_cli:stats_cli_main"
data_ferret_timers = "data_ferret.cli.ferret_timers:main"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.sdist]
artifacts = ["data_ferret/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"data_ferret/labextension" = "share/jupyter/labextensions/data_ferret"
"install.json" = "share/jupyter/labextensions/data_ferret/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.version]
path = "data_ferret/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "data_ferret/labextension/static/style.js",
    "data_ferret/labextension/package.json",
]
skip-if-exists = ["data_ferret/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "data_ferret/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
