[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "flowbook-python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jupyter_server>=2.4.0,<3",
    "jupyterlab>=4.0.0",
    "nbformat>=5.0.0",
    "jupyter",
    "termcolor",
    "dill",
    "markdown",
    "jupytext",
    "pandas>=2.3.3",
    "numpy",
    "seaborn",
    "matplotlib",
    "scikit-learn",
    "scipy",
    "pytest",
    "pytest-asyncio",
    "hypothesis",
    "libcst>=1.0.0",
    "scalene", 
    "filelock>=3.0",
    "pympler",

    "nbconvert",

    # Server Extension
    "jupyter-client>=7.0",
    "tornado",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.scripts]
flowbook = "flowbook.cli.cli:cli_main"
flowbook_stats = "flowbook.cli.stats_cli:stats_cli_main"
flowbook_timers = "flowbook.cli.flowbook_timers:main"
flowbook_metadata = "flowbook.cli.metadata_cli:metadata_cli_main"
flowbook_slurm = "flowbook.slurm.slurm_cli:main"
flowbook_compare_overhead = "flowbook.cli.compare_overhead:main"
flowbook_show_errors = "flowbook.cli.show_errors:main"
flowbook_slurm_logs = "flowbook.cli.slurm_logs:main"
flowbook_nb_diff = "flowbook.util.nb_diff:main"
flowbook_compare_fixed_overhead = "flowbook.cli.compare_fixed_overhead:main"
flowbook_mcp = "flowbook.mcp.server:main"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.sdist]
artifacts = ["flowbook/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"flowbook/labextension" = "share/jupyter/labextensions/flowbook"
"install.json" = "share/jupyter/labextensions/flowbook/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
"flowbook/nbi/extension_data" = "share/jupyter/nbi_extensions/flowbook"

[tool.hatch.build.hooks.version]
path = "flowbook/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "flowbook/labextension/static/style.js",
    "flowbook/labextension/package.json",
]
skip-if-exists = ["flowbook/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "flowbook/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.check-wheel-contents]
ignore = ["W002"]
