[build-system]
requires = ["hatchling>=1.5.0"]
build-backend = "hatchling.build"

[project]
name = "flowbook-python"
version = "0.0.1"
description = "Placeholder package for flowbook-python PyPI name reservation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Stephen Freund", email = "sfreund@williams.edu" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/stephenfreund/FlowBook"
Repository = "https://github.com/stephenfreund/FlowBook"

[tool.hatch.build.targets.sdist]
include = [
    "flowbook/",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["flowbook"]
